--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>vue-chat</title>
+    <title>微信</title>
     <style>
         * {
             box-sizing: border-box;
@@ -32,6 +32,6 @@
   </head>
   <body>
     <app></app>
-    <script src="dist/build.js"></script>
+    <script src="dist/main.js"></script>
   </body>
 </html>
